--- a/MIlestone 1/css/style.css
+++ b/MIlestone 1/css/style.css
@@ -7,7 +7,6 @@
 body{
     width:100%;
     height:100vh;
-
     background: linear-gradient(to bottom, #009588 10%, #d9dbd5 0%);
 }
 
@@ -31,9 +30,21 @@ main{
 }
 .col-right{
     width:60%;
-    background-image: url("../img/qwd83nc4xxf41.jpg");
+    background-image: url("../img/mine.jpg");
 }
 .top{
     height: 100px;
     background-color: #eaeaea;
+    line-height: 100px;
+}
+.top img{
+    height: 80px;
+    display: inline-block;
+    border-radius: 50%;
+    line-height: 100px;
+}
+.top span{
+    height: 80px;
+    border-radius: 50%;
+    line-height: 100px;
 }
