Milestone 1 quasi completata

--- a/MIlestone 1/css/style.css
+++ b/MIlestone 1/css/style.css
@@ -5,11 +5,13 @@
     box-sizing: border-box;
 }
 body{
+    /* il body non si tocca!!! */
+}
+.app-container{
     width:100%;
     height:100vh;
     background: linear-gradient(to bottom, #009588 20%, #d9dbd5 0%);
 }
-
 main{
     padding-top: 20px;
 }
@@ -17,8 +19,9 @@ main{
     width:80%;
     max-width: 900px;
     margin:auto;
-    min-height: 900px;
     display: flex;
+    /* TEST */
+    min-height: 900px;
 }
 /* COLUMNS */
 .top{
@@ -111,4 +114,56 @@ main{
 .col-right{
     width:60%;
     background-image: url("../img/mine.jpg");
+
+}
+/* CONTATTO ATTIVO */
+.active-contact{
+
+}
+/* CONTENITORE MESSAGGI */
+.message-container{
+    padding: 40px;
+    /* test */
+    height: calc(100% - 160px);
+}
+.message{
+    position:relative;
+    padding: 20px;
+    border-radius: 15px;
+    margin:20px 0px;
+}
+.time{
+    position:absolute;
+    bottom: 5px;
+    right:5px;
+    font-size: 10px;
+    color:#bec1c3;
+}
+.sent{
+    float:left;
+    background-color: white;
+}
+.received{
+    float:right;
+    background-color: #d5f9ba;
+}
+/* CONTENITORE INPUT MESSAGGI  */
+.message-sender{
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* width */
+    background-color: #f3eeea;
+    align-items: center;
+}
+.message-sender i{
+    font-size: 20px;
+    color:#6b7477 ;
+}
+.message-sender input{
+    width: 80%;
+    height: 50px;
+    border-radius: 20px;
+    border:1px solid #f3eeea;
 }
